# server/api/controller.go
@@ -74,15 +74,14 @@ func (c *controller) GetInfo(w http.ResponseWriter, r *http.Request) {
 
 	if c.services.WeatherStation != nil && c.services.WeatherStation.WeatherStatonResponse != nil {
 		resp.WeatherStation = &WeatherStation{
-			AnemometerAverage: c.services.WeatherStation.WeatherStatonResponse.AvgWindSpeed,
-			AnemometerMin:     c.services.WeatherStation.WeatherStatonResponse.MinWindSpeed,
-			AnemometerMax:     c.services.WeatherStation.WeatherStatonResponse.MaxWindSpeed,
-			Gas:               c.services.WeatherStation.WeatherStatonResponse.Gas,
-			Pressure:          c.services.WeatherStation.WeatherStatonResponse.Pressure,
-			RelativeHumidity:  c.services.WeatherStation.WeatherStatonResponse.RelativeHumidity,
-			Temperature:       c.services.WeatherStation.WeatherStatonResponse.Temperature,
-			Timestamp:         c.services.WeatherStation.WeatherStatonResponse.Timestamp,
-			VaneDirection:     c.services.WeatherStation.WeatherStatonResponse.VaneDirection,
+			WindSpeed:     c.services.WeatherStation.WeatherStatonResponse.WindSpeed,
+			Gas:           c.services.WeatherStation.WeatherStatonResponse.Gas,
+			Pressure:      c.services.WeatherStation.WeatherStatonResponse.Pressure,
+			Humidity:      c.services.WeatherStation.WeatherStatonResponse.Humidity,
+			Temperature:   c.services.WeatherStation.WeatherStatonResponse.Temperature,
+			Timestamp:     c.services.WeatherStation.WeatherStatonResponse.Timestamp,
+			VaneDirection: c.services.WeatherStation.WeatherStatonResponse.VaneDirection,
+			Rainfall:      c.services.WeatherStation.WeatherStatonResponse.Rainfall,
 		}
 	}
 
