# server/api/generated.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 package api
 
 import (
@@ -115,23 +115,15 @@ type Trivia struct {
 
 // WeatherStation defines model for WeatherStation.
 type WeatherStation struct {
-	// AnemometerAverage Average wind speed measured by the anemometer.
-	AnemometerAverage float64 `json:"anemometerAverage"`
-
-	// AnemometerMax Maximum wind speed measured by the anemometer.
-	AnemometerMax float64 `json:"anemometerMax"`
-
-	// AnemometerMin Minimum wind speed measured by the anemometer.
-	AnemometerMin float64 `json:"anemometerMin"`
-
 	// Gas Gas concentration level measured.
 	Gas float64 `json:"gas"`
 
+	// Humidity Relative humidity percentage.
+	Humidity float64 `json:"humidity"`
+
 	// Pressure Atmospheric pressure in hPa.
 	Pressure float64 `json:"pressure"`
-
-	// RelativeHumidity Relative humidity percentage.
-	RelativeHumidity float64 `json:"relativeHumidity"`
+	Rainfall float64 `json:"rainfall"`
 
 	// Temperature Current temperature in degrees Celsius.
 	Temperature float64 `json:"temperature"`
@@ -141,6 +133,9 @@ type WeatherStation struct {
 
 	// VaneDirection Wind direction in degrees from the vane.
 	VaneDirection float64 `json:"vaneDirection"`
+
+	// WindSpeed Average wind speed measured by the anemometer.
+	WindSpeed float64 `json:"windSpeed"`
 }
 
 // ServerInterface represents all server handlers.
